--- a/index.html
+++ b/index.html
@@ -27,51 +27,55 @@
       padding: 0 15px;
     }
 
-    section { padding: 30px 0; }
+    section { padding: 25px 0; }
     .bg-white { background-color: var(--white); }
 
     /* --- Header --- */
     header {
       background: var(--white);
-      padding: 10px 0;
-      border-bottom: 1px solid #ddd;
+      padding: 8px 0;
+      border-bottom: 1px solid #eee;
     }
-    .logo { font-weight: bold; color: var(--main); font-size: 1.2rem; }
+    .logo { font-weight: bold; color: var(--main); font-size: 1.1rem; }
 
-    /* --- Hero (背景画像) --- */
+    /* --- Hero (高さを短く調整) --- */
     .hero {
       position: relative;
-      background: url("images/hero.jpg") no-repeat 75% center / cover;
-      height: 50vh;
-      min-height: 300px;
+      background: url("images/hero.jpg") no-repeat 80% center / cover;
+      height: 38vh; /* 縦幅を短縮 */
+      min-height: 250px;
       display: flex;
       align-items: center;
     }
-    /* 文字の視認性を上げるためのグラデーション */
     .hero::before {
       content: "";
       position: absolute;
       inset: 0;
-      background: linear-gradient(to right, rgba(255,255,255,0.85) 0%, rgba(255,255,255,0.4) 50%, rgba(255,255,255,0) 100%);
+      background: linear-gradient(to right, rgba(255,255,255,0.9) 0%, rgba(255,255,255,0.3) 60%, rgba(255,255,255,0) 100%);
     }
     .hero-content {
       position: relative;
       z-index: 1;
-      width: 100%;
+      padding-left: 10px;
     }
-    .hero h1 { margin: 0; font-size: 1.6rem; color: var(--main); line-height: 1.2; }
-    .hero p { margin: 5px 0 0; font-weight: bold; color: var(--accent); font-size: 1rem; }
+    .hero h1 { margin: 0; font-size: 1.4rem; color: var(--main); line-height: 1.2; }
+    .hero p { margin: 3px 0 0; font-weight: bold; color: var(--accent); font-size: 0.9rem; }
 
-    /* --- Intro Text (改行調整) --- */
-    .intro { text-align: center; padding: 25px 15px; }
-    .intro p { margin: 0; font-size: 1rem; }
-    /* 変な改行を防ぐ設定 */
-    .keep-unit { display: inline-block; }
+    /* --- Intro Text --- */
+    .intro { text-align: center; padding: 20px 15px; }
+    .intro .quote { 
+      font-weight: bold; 
+      font-size: 1.1rem; 
+      color: var(--main);
+      display: block;
+      margin-bottom: 8px;
+    }
+    .intro p { margin: 0; font-size: 0.95rem; line-height: 1.7; }
 
     /* --- Grid Cards --- */
     .feature-grid {
       display: grid;
-      gap: 12px;
+      gap: 10px;
       grid-template-columns: 1fr;
     }
     .card {
@@ -79,55 +83,57 @@
       padding: 15px;
       border-radius: 12px;
       text-align: center;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+      box-shadow: 0 2px 8px rgba(0,0,0,0.04);
     }
-    .card img { width: 70px; height: 70px; margin-bottom: 10px; object-fit: contain; }
-    .card h4 { margin: 0 0 5px; color: var(--main); }
-    .card p { margin: 0; font-size: 0.9rem; }
+    .card img { width: 60px; height: 60px; margin-bottom: 8px; object-fit: contain; }
+    .card h4 { margin: 0 0 5px; color: var(--main); font-size: 1rem; }
+    .card p { margin: 0; font-size: 0.85rem; }
 
-    /* --- Diagram Section (スマホ表示バグ修正) --- */
-    .diagram-sec { background: var(--white); padding: 30px 15px; text-align: center; }
-    .diagram-sec h2 { font-size: 1.25rem; margin-bottom: 15px; color: var(--main); }
-    .diagram-container { width: 100%; max-width: 600px; margin: 0 auto; line-height: 0; }
+    /* --- Diagram Section (表示バグ対策) --- */
+    .diagram-sec { background: var(--white); padding: 25px 0; text-align: center; }
+    .diagram-sec h2 { font-size: 1.1rem; margin-bottom: 12px; color: var(--main); }
     .diagram-img {
       width: 100%;
+      max-width: 550px;
       height: auto;
-      display: block; /* 消えるのを防ぐ */
-      border-radius: 8px;
+      display: block;
+      margin: 0 auto;
+      border-radius: 6px;
     }
 
     /* --- Buttons --- */
     .btn-main {
       display: inline-block;
-      padding: 12px 30px;
+      padding: 10px 30px;
       background: var(--accent);
       color: #fff;
       text-decoration: none;
       border-radius: 30px;
       font-weight: bold;
-      margin-top: 15px;
+      margin-top: 12px;
     }
     .btn-sub {
       display: inline-block;
-      padding: 6px 15px;
+      padding: 5px 12px;
       border: 1.5px solid var(--main);
       color: var(--main);
       text-decoration: none;
       border-radius: 6px;
-      font-size: 0.85rem;
-      margin-top: 10px;
+      font-size: 0.8rem;
+      margin-top: 8px;
       font-weight: bold;
     }
 
-    footer { padding: 30px 0; text-align: center; font-size: 0.8rem; background: #f0f0f0; }
+    footer { padding: 20px 0; text-align: center; font-size: 0.75rem; background: #f4f4f4; border-top: 1px solid #eee; }
 
-    /* --- Desktop Adjustments --- */
+    /* --- Desktop --- */
     @media (min-width: 768px) {
-      .hero { height: 60vh; }
-      .hero h1 { font-size: 2.8rem; }
-      .hero p { font-size: 1.3rem; }
-      .feature-grid { grid-template-columns: repeat(3, 1fr); gap: 20px; }
-      section { padding: 40px 0; }
+      .hero { height: 45vh; }
+      .hero h1 { font-size: 2.5rem; }
+      .hero p { font-size: 1.2rem; }
+      .feature-grid { grid-template-columns: repeat(3, 1fr); gap: 15px; }
+      section { padding: 35px 0; }
+      .intro .quote { font-size: 1.4rem; }
     }
   </style>
 </head>
@@ -147,13 +153,12 @@
 </div>
 
 <section class="intro container">
+  <span class="quote">「障害を持ったお子さんにも自分で動かす楽しさを」</span>
   <p>
-    <span class="keep-unit">「障害を持ったお子さんにも</span>
-    <span class="keep-unit">自分で動かす楽しさを」</span><br>
-    私たちは電池式おもちゃの改造や専用スイッチの作成を通じて、<br class="pc-only">子どもたちの「自分でできた！」という喜びを応援しています。
+    私たちは電池式おもちゃの改造や専用スイッチの作成を通じて、子どもたちの「自分でできた！」という喜びを応援しています。
   </p>
-  <a href="https://www.toyhospital.org/gpsyougaiji" target="_blank" style="font-size: 0.8rem; color: #666; margin-top: 10px; display: block;">
-    日本おもちゃ病院協会 障がい児支援活動について →
+  <a href="https://www.toyhospital.org/gpsyougaiji" target="_blank" style="font-size: 0.75rem; color: #888; margin-top: 8px; display: inline-block;">
+    日本おもちゃ病院協会 支援活動について →
   </a>
 </section>
 
@@ -168,12 +173,12 @@
       <div class="card">
         <img src="images/icon-jack.png" alt="ジャック">
         <h4>ジャック増設</h4>
-        <p>外部スイッチが繋げるように端子を取り付けます。</p>
+        <p>外部スイッチが繋げる端子を取り付けます。</p>
       </div>
       <div class="card">
         <img src="images/icon-switch.png" alt="スイッチ">
         <h4>スイッチ作成</h4>
-        <p>お子様の特性に合わせたスイッチを手作りします。</p>
+        <p>お子様の特性に合わせたスイッチを作ります。</p>
       </div>
     </div>
   </div>
@@ -182,19 +187,17 @@
 <section class="diagram-sec">
   <div class="container">
     <h2>ジャック取り付けのイメージ</h2>
-    <div class="diagram-container">
-      <img src="images/illustration-jack.jpg" alt="改造の仕組み図解" class="diagram-img">
-    </div>
-    <p style="font-size: 0.9rem; margin-top: 15px; color: #555;">電池式おもちゃに専用ジャックを繋ぎ、外部スイッチで操作可能にします。</p>
+    <img src="images/illustration-jack.jpg" alt="改造の仕組み図解" class="diagram-img">
+    <p style="font-size: 0.8rem; margin-top: 10px; color: #666; padding: 0 10px;">電池式おもちゃに専用ジャックを繋ぎ、外部スイッチで操作可能にします。</p>
   </div>
 </section>
 
-<section class="container" style="text-align: center;">
-  <div class="card" style="max-width: 600px; margin: auto; padding: 30px;">
-    <h3 style="margin-top: 0; color: var(--main);">ご相談・お問い合わせ</h3>
-    <p>改造の依頼、スイッチの適合、使い方の相談などお気軽にメールください。</p>
-    <a href="mailto:seigou.fthp@gmail.com" class="btn-main">メールでお問い合わせ</a>
-    <p style="font-size: 0.9rem; margin-top: 15px; font-weight: bold;">📩 seigou.fthp@gmail.com</p>
+<section class="container" style="text-align: center; padding-top: 10px;">
+  <div class="card" style="max-width: 550px; margin: auto; border: 1px solid #eee;">
+    <h3 style="margin: 0 0 10px; color: var(--main); font-size: 1.1rem;">ご相談・お問い合わせ</h3>
+    <p style="font-size: 0.9rem;">改造依頼や、スイッチの適合などのご相談はこちら</p>
+    <a href="mailto:seigou.fthp@gmail.com" class="btn-main">メールを送る</a>
+    <p style="font-size: 0.85rem; margin-top: 10px; color: var(--main); font-weight: bold;">📩 seigou.fthp@gmail.com</p>
   </div>
 </section>
 
@@ -203,19 +206,16 @@
     <div class="card">
       <img src="images/icon-box.png" alt="貸出">
       <h4>おもちゃの貸出</h4>
-      <p>改造済みおもちゃを試せます。</p>
       <a href="https://sites.google.com/view/fthp/toy-list" class="btn-sub">貸出リスト</a>
     </div>
     <div class="card">
-      <div style="font-size: 2.5rem; margin-bottom: 10px;">🛠️</div>
+      <div style="font-size: 2rem; margin-bottom: 5px;">🛠️</div>
       <h4>スイッチ紹介</h4>
-      <p>自作スイッチのサンプルです。</p>
       <a href="https://sites.google.com/view/fthp/switch-sample" class="btn-sub">サンプルを見る</a>
     </div>
     <div class="card">
-      <div style="font-size: 2.5rem; margin-bottom: 10px;">📰</div>
+      <div style="font-size: 2rem; margin-bottom: 5px;">📰</div>
       <h4>メディア紹介</h4>
-      <p>チイコミ掲載記事です。</p>
       <a href="https://chiicomi.com/press/2057941/" target="_blank" class="btn-sub">記事を読む</a>
     </div>
   </div>
@@ -224,7 +224,7 @@
 <footer>
   <div class="container">
     <p>© 2024 船橋おもちゃの病院</p>
-    <a href="https://sites.google.com/view/fthp/home" style="color: #999; text-decoration: underline;">Googleサイト版を表示</a>
+    <a href="https://sites.google.com/view/fthp/home" style="color: #999;">Googleサイト版へ</a>
   </div>
 </footer>
 
