Replace JPG image with PNG in index.html

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 <section class="diagram-sec">
   <div class="container">
     <h2>取り付けのイメージ</h2>
-    <img src="images/illustration-jack.jpg" alt="改造の仕組み" class="diagram-img">
+    <img src="images/illustration-jack.png" alt="改造の仕組み" class="diagram-img">
   </div>
 </section>
 
