--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       font-family: "Helvetica Neue", Arial, "Hiragino Kaku Gothic ProN", sans-serif;
       background: var(--bg);
       color: var(--text);
-      line-height: 1.6;
+      line-height: 1.7;
     }
 
     .container {
@@ -27,60 +27,69 @@
       padding: 0 15px;
     }
 
-    section { padding: 30px 0; }
+    /* 余白を全セクションで統一 */
+    section { padding: 40px 0; }
     .bg-white { background-color: var(--white); }
 
-    /* --- Header --- */
     header { background: var(--white); padding: 12px 0; border-bottom: 1px solid #eee; }
     .logo { font-weight: bold; color: var(--main); font-size: 1.2rem; }
 
-    /* --- Hero (出し分けの肝) --- */
+    /* --- Hero (上下カット＆カードを大胆に配置) --- */
     .hero {
       position: relative;
-      background: url("images/hero.jpg") no-repeat 80% center / cover;
-      height: 40vh; /* スマホでは短め */
-      min-height: 300px;
+      /* 上下1割をカットするイメージで中央付近を表示 */
+      background: url("images/hero.jpg") no-repeat center 40% / cover;
+      height: 35vh;
+      min-height: 280px;
       display: flex;
       align-items: center;
+      justify-content: center;
     }
-    .hero-content {
-      position: relative;
-      z-index: 1;
-      width: 100%;
-    }
-    /* 文字を見やすくするカード */
     .hero-card {
-      background: rgba(255, 255, 255, 0.85);
-      padding: 20px;
-      border-radius: 0 20px 20px 0; /* 左側固定、右丸み */
-      display: inline-block;
-      max-width: 80%;
-      box-shadow: 5px 5px 15px rgba(0,0,0,0.1);
+      background: rgba(255, 255, 255, 0.92);
+      padding: 25px;
+      width: 90%;
+      max-width: 500px;
+      text-align: center;
+      border-radius: 15px;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.1);
     }
-    .hero h1 { margin: 0; font-size: 1.5rem; color: var(--main); line-height: 1.3; }
-    .hero p { margin: 5px 0 0; font-weight: bold; color: var(--accent); font-size: 0.9rem; }
+    .hero h1 { margin: 0; font-size: 1.6rem; color: var(--main); line-height: 1.3; }
+    .hero p { margin: 8px 0 0; font-weight: bold; color: var(--accent); font-size: 1rem; }
 
-    /* --- Intro --- */
-    .intro { text-align: center; padding: 30px 15px; }
+    /* --- Intro (改行調整) --- */
+    .intro { text-align: center; }
     .intro .quote { 
       font-weight: bold; 
-      font-size: 1.2rem; 
+      font-size: 1.3rem; 
       color: var(--main);
       display: block;
-      line-height: 1.5;
       margin-bottom: 15px;
     }
-    .intro p { margin: 0; font-size: 0.95rem; }
+    .intro p { 
+      margin: 0; 
+      font-size: 1rem; 
+      word-break: keep-all; /* 単語の途中で改行させない */
+      overflow-wrap: anywhere;
+    }
 
-    /* --- Feature Grid (スマホ: 2列 / PC: 3列) --- */
+    /* --- Partners (連携病院) --- */
+    .partners {
+      font-size: 0.85rem;
+      margin-top: 20px;
+      color: #666;
+    }
+    .partners a { color: var(--main); text-decoration: underline; margin: 0 5px; }
+
+    /* --- Feature Grid --- */
     .feature-grid {
       display: grid;
-      gap: 12px;
+      gap: 15px;
       grid-template-columns: repeat(2, 1fr);
     }
     .card {
       background: var(--white);
-      padding: 15px;
+      padding: 20px 15px;
       border-radius: 12px;
       text-align: center;
       box-shadow: 0 3px 10px rgba(0,0,0,0.05);
@@ -88,27 +97,19 @@
       flex-direction: column;
       justify-content: center;
     }
-    .card img { width: 50px; height: 50px; margin: 0 auto 8px; object-fit: contain; }
-    .card h4 { margin: 0 0 5px; color: var(--main); font-size: 0.9rem; }
+    .card img { width: 50px; height: 50px; margin: 0 auto 10px; object-fit: contain; }
+    .card h4 { margin: 0 0 5px; color: var(--main); font-size: 0.95rem; }
     .card p { margin: 0; font-size: 0.8rem; line-height: 1.4; }
 
-    /* 3つ目のカード（スマホでは全幅にしてバランス調整） */
-    .feature-grid .card-wide {
-      grid-column: span 2;
-      flex-direction: row;
-      gap: 15px;
-      padding: 15px 25px;
-      text-align: left;
-    }
+    /* スマホで全幅にするカード */
+    .card-full { grid-column: span 2; }
 
     /* --- Diagram Section --- */
-    .diagram-sec { background: var(--white); text-align: center; padding: 30px 0; }
-    .diagram-sec h2 { font-size: 1.2rem; margin-bottom: 15px; color: var(--main); }
+    .diagram-sec { background: var(--white); text-align: center; }
     .diagram-img {
       width: 100%;
-      max-width: 550px;
+      max-width: 500px;
       height: auto;
-      display: inline-block;
       border-radius: 10px;
     }
 
@@ -125,37 +126,31 @@
     }
     .btn-sub {
       display: inline-block;
-      padding: 6px 15px;
+      padding: 8px 15px;
       border: 1.5px solid var(--main);
       color: var(--main);
       text-decoration: none;
       border-radius: 6px;
-      font-size: 0.8rem;
+      font-size: 0.85rem;
       margin-top: 10px;
       font-weight: bold;
     }
 
-    footer { padding: 30px 0; text-align: center; font-size: 0.8rem; background: #f4f4f4; color: #777; }
+    footer { padding: 30px 0; text-align: center; font-size: 0.75rem; background: #f4f4f4; color: #777; }
 
-    /* --- PC用スタイル (画面幅 768px以上) --- */
+    /* --- PC用スタイル (768px以上) --- */
     @media (min-width: 768px) {
-      .hero { height: 500px; background-position: center center; }
-      .hero-card { padding: 40px; max-width: 500px; border-radius: 0 30px 30px 0; }
-      .hero h1 { font-size: 2.8rem; }
-      .hero p { font-size: 1.3rem; }
-
-      .intro { padding: 50px 0; }
-      .intro .quote { font-size: 1.8rem; }
-      .intro p { font-size: 1.1rem; }
+      .hero { height: 450px; justify-content: flex-start; }
+      .hero-card { margin-left: 10%; text-align: left; padding: 40px; max-width: 550px; }
+      .hero h1 { font-size: 3rem; }
+      .hero p { font-size: 1.4rem; }
 
       .feature-grid { grid-template-columns: repeat(3, 1fr); gap: 20px; }
-      .feature-grid .card-wide { grid-column: span 1; flex-direction: column; text-align: center; }
-      .card { padding: 30px 20px; }
-      .card img { width: 80px; height: 80px; margin-bottom: 15px; }
+      .card-full { grid-column: span 1; }
+      .card { padding: 35px 25px; }
+      .card img { width: 75px; height: 75px; }
       .card h4 { font-size: 1.1rem; }
       .card p { font-size: 0.9rem; }
-      
-      .diagram-sec { padding: 50px 0; }
     }
   </style>
 </head>
@@ -166,7 +161,7 @@
 </header>
 
 <div class="hero">
-  <div class="hero-content">
+  <div class="hero-content container">
     <div class="hero-card">
       <h1>船橋おもちゃの病院</h1>
       <p>障がい児の遊び支援活動</p>
@@ -183,9 +178,11 @@
     電池式おもちゃの改造や専用スイッチの作成を通じて、<br class="pc-only">
     子どもたちの「自分でできた！」という喜びを応援しています。
   </p>
-  <a href="https://www.toyhospital.org/gpsyougaiji" target="_blank" style="font-size: 0.8rem; color: #888; margin-top: 15px; display: inline-block;">
-    日本おもちゃ病院協会 障がい児支援活動について →
-  </a>
+  <div class="partners">
+    【 連携病院 】 
+    <a href="https://kamagaya-toy-h.jimdofree.com/" target="_blank">鎌ケ谷おもちゃ病院</a> / 
+    <a href="https://gyotoku-toy.jimdofree.com/" target="_blank">行徳おもちゃ病院</a>
+  </div>
 </section>
 
 <section class="bg-white">
@@ -201,12 +198,10 @@
         <h4>ジャック増設</h4>
         <p>外部スイッチが繋げる端子を取り付けます。</p>
       </div>
-      <div class="card card-wide">
+      <div class="card card-full">
         <img src="images/icon-switch.png" alt="スイッチ">
-        <div>
-          <h4>スイッチ作成</h4>
-          <p>お子様の特性に合わせたスイッチを手作りします。</p>
-        </div>
+        <h4>スイッチ作成</h4>
+        <p>お子様の特性に合わせたスイッチを手作りします。</p>
       </div>
     </div>
   </div>
@@ -215,41 +210,39 @@
 <section class="diagram-sec">
   <div class="container">
     <h2>ジャック取り付けのイメージ</h2>
-    <img src="images/illustration-jack.png" alt="改造の仕組み図解" class="diagram-img">
-    <p style="font-size: 0.9rem; margin-top: 15px; color: #555; padding: 0 15px;">
+    <img src="images/illustration-jack.png" alt="改造の仕組み" class="diagram-img">
+    <p style="font-size: 0.9rem; margin-top: 15px; color: #555; padding: 0 10px;">
       電池式おもちゃに専用ジャックを繋ぎ、外部スイッチで操作可能にします。
     </p>
   </div>
 </section>
 
 <section class="container" style="text-align: center;">
-  <div class="card" style="max-width: 600px; margin: auto; padding: 30px; border: 1px solid #eee;">
-    <h3 style="margin: 0 0 10px; color: var(--main);">ご相談・お問い合わせ</h3>
-    <p>改造の依頼、スイッチの適合、使い方の相談などお気軽にメールください。</p>
+  <div class="card card-full" style="max-width: 600px; margin: auto; padding: 30px; border: 1px solid #eee;">
+    <h3 style="margin: 0 0 10px; color: var(--main); font-size: 1.1rem;">ご相談・お問い合わせ</h3>
+    <p style="font-size: 0.9rem;">改造依頼、スイッチの適合などお気軽にメールください。</p>
     <a href="mailto:seigou.fthp@gmail.com" class="btn-main">メールでお問い合わせ</a>
-    <p style="font-size: 0.9rem; margin-top: 15px; font-weight: bold;">📩 seigou.fthp@gmail.com</p>
+    <p style="font-size: 0.85rem; margin-top: 15px; font-weight: bold; color: var(--main);">📩 seigou.fthp@gmail.com</p>
   </div>
 </section>
 
 <section class="container">
   <div class="feature-grid">
     <div class="card">
-      <div style="font-size: 2.5rem; margin-bottom: 10px;">📦</div>
+      <div style="font-size: 2.2rem; margin-bottom: 5px;">📦</div>
       <h4>おもちゃの貸出</h4>
-      <p>改造済みを試せます。</p>
       <a href="https://sites.google.com/view/fthp/toy-list" class="btn-sub">貸出リスト</a>
     </div>
     <div class="card">
-      <div style="font-size: 2.5rem; margin-bottom: 10px;">🛠️</div>
+      <div style="font-size: 2.2rem; margin-bottom: 5px;">🛠️</div>
       <h4>スイッチ紹介</h4>
-      <p>自作サンプルです。</p>
-      <a href="https://sites.google.com/view/fthp/switch-sample" class="btn-sub">サンプルを見る</a>
+      <a href="https://sites.google.com/view/fthp/switch-sample" class="btn-sub">サンプル</a>
     </div>
-    <div class="card card-wide" style="text-align: center; flex-direction: column;">
-      <div style="font-size: 2.5rem; margin-bottom: 10px;">📰</div>
+    <div class="card card-full">
+      <div style="font-size: 2.2rem; margin-bottom: 5px;">📰</div>
       <h4>メディア紹介</h4>
-      <p>チイコミ掲載記事です。</p>
-      <a href="https://chiicomi.com/press/2057941/" target="_blank" class="btn-sub">記事を読む</a>
+      <p style="font-size: 0.85rem; margin-bottom: 5px;">チイコミ掲載記事です。</p>
+      <a href="https://chiicomi.com/press/2057941/" target="_blank" class="btn-sub" style="max-width: 200px; margin: 10px auto 0;">記事を読む</a>
     </div>
   </div>
 </section>
